pp2/samples/bad6.out

*** Error line 5.
    else
    ^^^^
*** parse error

